TableHeader: fix alignment of right and center multiline columns

--- a/eclipse-scout-core/src/table/TableHeader.less
+++ b/eclipse-scout-core/src/table/TableHeader.less
@@ -85,12 +85,14 @@
 
   &.halign-right {
     justify-content: flex-end;
+    text-align: right; // Necessary for multiline header
     padding-right: @table-header-item-padding-left;
     padding-left: @table-header-item-padding-right;
   }
 
   &.halign-center {
     justify-content: center;
+    text-align: center; // Necessary for multiline header
     padding-right: @table-header-item-padding-left;
   }
 
